--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
      <title>Amrit Singh</title>
-     <link rel="stylesheet" href="css/styles.css">
+     <link rel="stylesheet" href="styles.css">
     
-     <link rel="icon" href="images/letter-a.png">
+     <link rel="icon" href="letter-a.png">
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
        <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1>I'm Amrit</h1>
         <p class="head">A Programmer</p>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="cloud-img">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+        <img src="mountain.png" alt="cloud-img">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="images/amrit009.png" alt="admin-picture">
+          <img src="amrit009.png" alt="admin-picture">
           <h2>Hello.</h2>
           <p class="intro">My Name is Amrit Singh And I am a Professional Web Developer And Runs a Multi Platform AD Running Company .</p>
         </div>
@@ -28,12 +28,12 @@
         <div class="skills">
           <h2>My Hobbies.</h2>
           <div class="skill-row">
-            <img class="gym" src="images/fitness.png" alt="fitness">
+            <img class="gym" src="fitness.png" alt="fitness">
             <h3>Gym</h3>
             <p>I ❤️ Going to GYM and It is one my Greatest Hobby.         </div>
                 <br>
           <div class="skill-row">
-            <img class="audio" src="images/audio-book.png" alt="audio">
+            <img class="audio" src="audio-book.png" alt="audio">
             <h3>Audiophile</h3>
             <p>Yes , I am an AUDIOPHILE and I Love listening to Hard Metal Songs .         </div>
         </div>
